fix css to avoid text and image overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -467,26 +467,17 @@ header {
         box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
         display: grid;
         background-color: $primary-color;
-        grid-template-columns: 5fr 4fr;
+        grid-template-columns: 1fr 1fr;
         padding: 1rem;
         gap: 1rem;
         font-family: "Courier New", "Courier", monospace;
-
+        align-items: center;
         .thumbnail {
-          flex: 1.3;
-          flex-basis: 0;
-          position: relative;
-          overflow: clip;
           box-shadow: $cool-shadow;
 
-          img {
-            position: absolute;
-            max-height: 100%;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-          }
+          max-width: 100%;
         }
+
         .description {
           padding-top: 1rem;
           flex: 1;
@@ -495,13 +486,18 @@ header {
           flex-direction: column;
           align-items: center;
           gap: 1.5rem;
+          p {
+            height: 10rem;
+            overflow-y: auto;
+          }
           .technologies {
             font-size: 1rem;
+
             li {
+              font-weight: 900;
               padding: 0.5rem;
               // box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
               font-size: 0.85rem;
-              font-weight: 800;
             }
           }
 
@@ -662,7 +658,6 @@ header {
       display: none;
     }
     .project-card {
-      grid-template-rows: 4fr 5fr !important;
       grid-template-columns: 1fr !important;
     }
   }
